# server/services/TaskService.js
@@ -6,15 +6,15 @@ const camunda = require("../camunda-utils/CamundaUtils");
  * 查询用户任务
  * 通过用户名和用户角色来查询相关的用户任务
  *
- * taskQueryDto TaskQueryDto
+ * taskListQueryDto TaskListQueryDto
  * no response value expected for this operation
  * */
-const getTaskList = ({ taskQueryDto }) =>
+const getTaskList = ({ taskListQueryDto }) =>
   new Promise(async (resolve, reject) => {
     try {
       const taskList = await camunda.getTaskList(
-        taskQueryDto.username,
-        taskQueryDto.roles
+        taskListQueryDto.username,
+        taskListQueryDto.roles
       );
       resolve(
         Service.successResponse({
@@ -29,6 +29,24 @@ const getTaskList = ({ taskQueryDto }) =>
     }
   });
 
+const getApplicationDetail = ({ id }) =>
+  new Promise(async (resolve, reject) => {
+    try {
+      const applicationDetail = await camunda.getApplicationDetail(id);
+      resolve(
+        Service.successResponse({
+          code: 20000,
+          data: applicationDetail
+        })
+      );
+    } catch (e) {
+      reject(
+        Service.rejectResponse(e.message || "Invalid input", e.status || 405)
+      );
+    }
+  });
+
 module.exports = {
-  getTaskList
+  getTaskList,
+  getApplicationDetail
 };
